Phase4/k8s-cicd/bluegreen/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-blue
  namespace: taskflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskflow
      version: blue
  template:
    metadata:
      labels:
        app: taskflow
        version: blue
    spec:
      containers:
      - name: taskflow
        image: damioya/taskflow-api:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
