Phase4/k8s-cicd/bluegreen/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-green
  namespace: taskflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskflow
      version: green
  template:
    metadata:
      labels:
        app: taskflow
        version: green
    spec:
      containers:
      - name: taskflow
        image: damioya/taskflow-api:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
