Phase4/k8s-cicd/bluegreen/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-stable-service
  namespace: taskflow
spec:
  type: ClusterIP
  selector:
    app: taskflows
    version: blue
  ports:
  - port: 80
    targetPort: 8000
